--- a/app/src/radioZamaneh/res/layout/activity_settings.xml
+++ b/app/src/radioZamaneh/res/layout/activity_settings.xml
@@ -39,7 +39,8 @@
                     style="@style/SettingsRadioButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/settings_proxy_psiphon" />
+                    android:text="@string/settings_proxy_psiphon"
+                    android:visibility="gone" />
 
                 <RadioButton
                     android:id="@+id/rbProxyNone"
