--- a/app/src/radioZamaneh/res/layout/activity_help.xml
+++ b/app/src/radioZamaneh/res/layout/activity_help.xml
@@ -72,7 +72,8 @@
                     android:adjustViewBounds="true"
                     android:cropToPadding="false"
                     android:scaleType="fitStart"
-                    android:src="@drawable/img_panic" />
+                    android:src="@drawable/img_panic"
+                    android:padding="20dp" />
 
                 <LinearLayout
                     android:layout_width="fill_parent"
