--- a/app/src/radioZamaneh/res/values/integers.xml
+++ b/app/src/radioZamaneh/res/values/integers.xml
@@ -16,6 +16,6 @@
     <!-- these have parameters -->
     <integer name="command_view_media">0</integer>
     <integer name="command_add_feed_manual">0</integer>
-    
+    <integer name="command_read_more">0</integer>
     
 </resources>
