--- a/app/src/radioZamaneh/res/layout/story_item_page_merge_landscape_photo.xml
+++ b/app/src/radioZamaneh/res/layout/story_item_page_merge_landscape_photo.xml
@@ -1,7 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp">
+    android:layout_height="120dp"
+	android:layoutDirection="rtl"
+	>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,13 +28,16 @@
         android:id="@+id/tvTitle"
         style="@style/ItemTitleStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:ellipsize="end"
 		android:text="@string/story_item_short_title"
         android:layout_centerVertical="true"
         android:gravity="center_vertical"
 		android:layout_marginRight="60dp"
-		android:maxLines="2" />
+		android:maxLines="2"
+		android:textDirection="rtl"
+		android:layoutDirection="rtl"
+		/>
 
     </RelativeLayout>
 
@@ -73,4 +78,4 @@
 
 	</info.guardianproject.zt.views.RoundRelativeLayout>
 
-</RelativeLayout>
+</merge>
