--- a/app/src/radioZamaneh/res/layout/nav_header_base.xml
+++ b/app/src/radioZamaneh/res/layout/nav_header_base.xml
@@ -48,8 +48,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/radio_play"
+            android:textColor="@android:color/white"
             android:id="@+id/btnPlayRadioText" />
     </LinearLayout>
 
