--- a/app/src/radioZamaneh/res/layout/activity_help.xml
+++ b/app/src/radioZamaneh/res/layout/activity_help.xml
@@ -72,8 +72,7 @@
                     android:adjustViewBounds="true"
                     android:cropToPadding="false"
                     android:scaleType="fitStart"
-                    android:src="@drawable/img_panic"
-                    android:padding="20dp" />
+                    android:src="@drawable/img_panic" />
 
                 <LinearLayout
                     android:layout_width="fill_parent"
