--- a/app/src/radioZamaneh/res/layout/activity_help.xml
+++ b/app/src/radioZamaneh/res/layout/activity_help.xml
@@ -38,6 +38,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="left|center_vertical|start"
+                    android:text="@string/help_rz_info_title" />
+
+                <TextView
+                    style="@style/HelpTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/help_rz_info_content"
+                    android:gravity="start|left" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:background="@drawable/white_with_bottom_shadow"
+                android:orientation="vertical" >
+
+                <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
+                    style="@style/HelpTitleStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left|center_vertical|start"
                     android:text="@string/help_tor_title" />
 
                 <TextView
