--- a/app/src/radioZamaneh/res/layout/story_item_page_blueprint.xml
+++ b/app/src/radioZamaneh/res/layout/story_item_page_blueprint.xml
@@ -105,7 +105,7 @@
             style="@style/ItemContentStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Loading Audio"
+            android:text="@string/media_status_loading"
             android:gravity="start|left" />
 
         <info.guardianproject.securereaderinterface.widgets.CustomFontTextView
