--- a/app/src/main/res/layout/activity_lock_screen.xml
+++ b/app/src/main/res/layout/activity_lock_screen.xml
@@ -6,7 +6,9 @@
     android:background="@color/lock_screen_background"
     android:gravity="center"
     android:orientation="vertical"
-    android:padding="20dp" >
+    android:padding="20dp"
+    android:filterTouchesWhenObscured="true"
+    >
 
     <Button
         android:id="@+id/btnStartCreatePassphrase"
