--- a/app/src/radioZamaneh/res/layout/activity_splash.xml
+++ b/app/src/radioZamaneh/res/layout/activity_splash.xml
@@ -7,8 +7,10 @@
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitStart"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
         android:src="@drawable/splash"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp" />
